Story/ccls 1845 proc outcome res (#43)
* story(ccls-1845): add outcome results endpoint

* story(ccls-1844): add description and wildcard searching for common v… (#38)

* story(ccls-1844): add description and wildcard searching for common values

* story(ccls-1844): checkstyle

* story(ccls-1844): dynamically build examplematcher based on wildcarded query params.
